Use .svg instead of .drawio in the docs files.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,18 +3,23 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
+    <div class="site-title">
+
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+</div>
 
    
-
-
     {%- if page_paths -%}
-    {% include automenu url='/' sort="url" reverse=false all=false %}
+   
+    <div class="nav">
+      {% include automenu url='/' sort="url" reverse=false all=false %}
+    </div>
   
-      <nav class="site-nav">
-       
-      </nav>
     {%- endif -%}
+
+   
   </div>
+
+ 
 </header>
