--- a/docs/_includes/mermaid.html
+++ b/docs/_includes/mermaid.html
@@ -1,10 +1,12 @@
-<script src="https://unpkg.com/mermaid@8.9.3/dist/mermaid.min.js"></script>
+<script src="https://unpkg.com/mermaid@9.1.3/dist/mermaid.js"></script>
 <script>
   $(document).ready(function () {
     mermaid.initialize({
-      startOnLoad:true,
-      theme: "default",
+      "startOnLoad": true,
+      "theme": "default",
+      "logLevel": 1,
+      "securitylevel": "loose",
     });
-    window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+  //  window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
   });
 </script>
