--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -1,17 +1,25 @@
 ---
 layout: default
 ---
+{% assign wordCount = content | number_of_words %}
+{% assign readTime = wordCount | divided_by: 100.0 | ceil   %}
 
-{% if
-    site.gh_edit_link and
-    site.gh_edit_link_text and
-    site.gh_edit_repository and
-    site.gh_edit_branch and
-    site.gh_edit_view_mode
-  %}
-    <p class="text-small text-grey-dk-000 mb-0">
-      <a href="{{ site.gh_edit_repository }}/commits/{{ site.gh_edit_branch }}{% if site.gh_edit_source %}/{{ site.gh_edit_source }}{% endif %}/{{ page.path }}" id="edit-this-page">🧾 View History</a>
+
+  <h1>{{page.title}}</h1>
+  <div class="reading-time">
+    <p class="text-small text-grey-dk-000 mb-0">📑 {{ wordCount }} words | ⏱ {{readTime}} mins
+      {% if
+        site.gh_edit_link and
+        site.gh_edit_link_text and
+        site.gh_edit_repository and
+        site.gh_edit_branch and
+        site.gh_edit_view_mode
+      %}
+       
+          | <a href="{{ site.gh_edit_repository }}/commits/{{ site.gh_edit_branch }}{% if site.gh_edit_source %}/{{ site.gh_edit_source }}{% endif %}/{{ page.path }}" id="edit-this-page">🧾 View History</a>
+      
+      {% endif %}
     </p>
-  {% endif %}
-
+  </div>
   {{ content }}
+
