--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,10 +1,26 @@
 ---
 layout: default
 ---
+{% assign wordCount = content | number_of_words %}
+{% assign readTime = wordCount | divided_by: 100.0 | ceil   %}
+
 
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
-
+<div class="reading-time">
+  <p class="text-small text-grey-dk-000 mb-0">📑 {{ wordCount }} words | ⏱ {{readTime}} mins
+    {% if
+      site.gh_edit_link and
+      site.gh_edit_link_text and
+      site.gh_edit_repository and
+      site.gh_edit_branch and
+      site.gh_edit_view_mode
+    %}
+     
+        | <a href="{{ site.gh_edit_repository }}/commits/{{ site.gh_edit_branch }}{% if site.gh_edit_source %}/{{ site.gh_edit_source }}{% endif %}/{{ page.path }}" id="edit-this-page">🧾 View History</a>
+    
+    {% endif %}
+  </p></div>
 <p class="view">by {{ page.author | default: site.author }}</p>
 
 {{content}}
