--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -3,7 +3,11 @@ layout: default
 ---
 {% assign wordCount = content | number_of_words %}
 {% assign readTime = wordCount | divided_by: 100.0 | ceil   %}
-
+{% if site.source_gh_edit_repository <> site.gh_edit_repository %}
+<p class="text-small text-grey-dk-000 mb-0">
+  ⚠️🍴 This site is a fork of <a href="{{ site.source_gh_edit_repository }}">{{ site.source_gh_edit_repository }}</a>
+  </p>
+{% endif %}
 
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
