problem with link images
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_sass/color_schemes/ce.scss
+++ b/docs/_sass/color_schemes/ce.scss
@@ -18,3 +18,8 @@ $nav-child-link-color: $grey-nhs-mid-grey;
 $body-heading-color: $blue-nhs-dark-blue;
 
 //$body-font-family: Frutiger, Arial;
+
+
+.text-nhs-mid-grey {
+    color: $grey-nhs-mid-grey !important;
+  }
