--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -15,6 +15,12 @@ layout: default
 
 <div class="reading-time">
   <p class="text-small text-grey-dk-000 mb-0">
+  {% if page.last_modified_date %}
+     {{ page.last_modified_date | date: "%Y-%m-%d"}} | 
+  {% else %}
+    2022-07-01 | 
+  {% endif %}
+
     📑 {{ wordCount }} words | ⏱ {{readTime}} mins 
     {% if site.gh_edit_link and
     site.gh_edit_link_text and site.gh_edit_repository and site.gh_edit_branch
@@ -22,12 +28,35 @@ layout: default
     <a
       href="{{ site.gh_edit_repository }}/commits/{{ site.gh_edit_branch }}{% if site.gh_edit_source %}/{{ site.gh_edit_source }}{% endif %}/{{ page.path }}"
       id="edit-this-page"
-      >🧾 View History</a
+      >🧾 History</a
     >
 
     {% endif %}
+|
+{% if page.author %}
+✍ {{page.author}}
+{% else %}
+✍ Ross Buggins
+{% endif %}
+|
+{% if page.owner %}
+🔑 {{page.owner}}
+{% else %}
+🔑 Ross Buggins
+{% endif %}
+
   </p>
+<p class="text-small text-grey-dk-000 mb-0">
+{% for tag in page.tags %}<a class="text-small" href="/tags/{{tag}}.html">{{tag}}</a>,{% endfor %}  
+</p>
+
+</div>
+
+
+
+
    {% if wordCount < wordWarning %} 
+   <div id="word-warning">
    <p class="text-small text-grey-dk-000 mb-0">
     🚧 This page has less that {{wordWarning}} words. So it looks like this page is still under construction.
   </p>
@@ -38,31 +67,21 @@ layout: default
    <p class="text-small text-grey-dk-000 mb-0">
     🌧🚼 This page is draft and is subject to rapid change, and may not be fully accurate or complete.
   </p>
+  
+</div>
     {% endif %}
 
-</div>
 
-<div class="page-info">
-  {% if page.last_modified_date %}
-  <p class="text-small text-grey-dk-000 mb-0">
-    Last Modified: {{ page.last_modified_date | date: "%-d %B %Y %H:%M"}} 
-  </p>
-  {% else %}
-  <p class="text-small text-grey-dk-000 mb-0">
-    Last Modified: 01 July 2022 12:00 (default)
- </p>  
-  {% endif %}
-
-  {% if page.author %}
-  <p class="text-small text-grey-dk-000 mb-0">
-     Author: {{page.author}}
-  </p>
-  {% else %}
-  <p class="text-small text-grey-dk-000 mb-0">
-    Author: Ross Buggins (default)
- </p>
+{% if page.description %}
+<p class="text-nhs-mid-grey mb-0"><i>{{page.description}}</i></p>
 {% endif %}
 
-</div>
+<p class="text-nhs-mid-grey mb-0">
+  <b>Issues/Todos</b>
+  <ul>
+    {% for todo in page.todo %}<li class="text-nhs-mid-grey mb-0">{{todo}}</li>{% endfor %}  
+  </ul>
+  </p>
 
+<hr/>
 {{ content }}
