--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
 
 <h1>{{page.title}}</h1>
 
-<div class="reading-time">
+<div class="page-info">
   <p class="text-small text-grey-dk-000 mb-0">
   {% if page.last_modified_date %}
      {{ page.last_modified_date | date: "%Y-%m-%d"}} | 
@@ -44,44 +44,32 @@ layout: default
 {% else %}
 🔑 Ross Buggins
 {% endif %}
-
-  </p>
-<p class="text-small text-grey-dk-000 mb-0">
-{% for tag in page.tags %}<a class="text-small" href="/tags/{{tag}}.html">{{tag}}</a>,{% endfor %}  
 </p>
 
-</div>
+<p class="text-small text-grey-dk-000 mb-0">{% for tag in page.tags %}<a class="text-small" href="/tags/{{tag}}.html">{{tag}}</a>,{% endfor %}</p>
 
+{% if wordCount < wordWarning %} 
+<p class="text-small text-grey-dk-000 mb-0">🚧 This page has less that {{wordWarning}} words. So it looks like this page is still under construction.</p>
+{% endif %}
 
-
-
-   {% if wordCount < wordWarning %} 
-   <div id="word-warning">
-   <p class="text-small text-grey-dk-000 mb-0">
-    🚧 This page has less that {{wordWarning}} words. So it looks like this page is still under construction.
-  </p>
-    {% endif %}
-
-    {% if page.is_not_draft %} 
-    {% else %}
-   <p class="text-small text-grey-dk-000 mb-0">
-    🌧🚼 This page is draft and is subject to rapid change, and may not be fully accurate or complete.
-  </p>
-  
-</div>
-    {% endif %}
 
 
 {% if page.description %}
 <p class="text-nhs-mid-grey mb-0"><i>{{page.description}}</i></p>
 {% endif %}
 
-<p class="text-nhs-mid-grey mb-0">
-  <b>Issues/Todos</b>
-  <ul>
-    {% for todo in page.todo %}<li class="text-nhs-mid-grey mb-0">{{todo}}</li>{% endfor %}  
-  </ul>
-  </p>
+
+
+{% if page.todo %}
+<p class="text-small text-nhs-mid-grey mb-0"><b>Known Issues</b></p>
+
+<ul>
+  {% if page.is_not_draft %}{% else %}<li class="text-small text-nhs-mid-grey mb-0">⛅ This page is draft and is subject to rapid change, and may not be fully accurate or complete</li>{% endif %}
+  {% for todo in page.todo %}<li class="text-small text-nhs-mid-grey mb-0">{{todo}}</li>{% endfor %}  
+</ul>
+{% endif %}
+</div>
 
 <hr/>
+
 {{ content }}
