thoughts over proxy access for DHC?
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -62,7 +62,7 @@ layout: default
 {% endif %}
 
 {% if page.todo or is_draft %}
-<p class="text-small text-nhs-mid-grey mb-0"><b>Known Issues</b></p>
+<p class="text-small text-nhs-mid-grey mb-0"><b>Known Issues / Todo</b></p>
 
 <ul>
   {% if page.is_not_draft %}{% else %}<li class="text-small text-nhs-mid-grey mb-0">⛅ This page is draft and is subject to rapid change, and may not be fully accurate or complete</li>{% endif %}
