--- a/docs/_sass/color_schemes/ce.scss
+++ b/docs/_sass/color_schemes/ce.scss
@@ -10,6 +10,17 @@ $grey-nhs-mid-grey: #768692;
 $grey-nhs-pale-grey: #E8EDEE;
 
 $header-height: 100px;
+$content-width: 1200px;
+$nav-width: 300px;
+$nav-width-md: 248px;
+
+$media-queries: (
+  xs: 320px,
+  sm: 500px,
+  md: 800px, //$content-width,
+  lg: $content-width + $nav-width,
+  xl: 1800px,
+);
 
 $link-color: $blue-nhs-blue;
 $btn-primary-color: $blue-nhs-bright-blue;
