Working on DHC discovery summary.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_sass/color_schemes/ce.scss
+++ b/docs/_sass/color_schemes/ce.scss
@@ -75,3 +75,7 @@ $body-heading-color: $blue-nhs-dark-blue;
 .text-nhs-mid-grey {
     color: $grey-nhs-mid-grey !important;
   }
+
+code svg{
+  height: auto;
+}
