--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% if site.source_gh_edit_repository <> site.gh_edit_repository %}
 <p class="text-small text-grey-dk-000 mb-0">
-  ⚠️🍴 This site is a fork of <a href="{{ site.source_gh_edit_repository }}">{{ site.source_gh_edit_repository }}</a> and can be viewed at <a href="{{ site.source_published_url }}">{{ site.source_published_url }}</a>
+  ⚠️🍴 This site is a fork of <a href="{{ site.source_gh_edit_repository }}">{{ site.source_gh_edit_repository }}</a> and can be viewed at <a href="{{ site.source_published_url }}{{page.url}}">{{ site.source_published_url }}{{page.url}}</a>
   </p>
 {% endif %}
 {{ content }}
