reveal js working, with mermaid and separate files.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_sass/color_schemes/ce.scss
+++ b/docs/_sass/color_schemes/ce.scss
@@ -62,6 +62,10 @@ blockquote code{
   color:$grey-nhs-mid-grey;
 }
 
+section pre code{
+  color:$grey-nhs-mid-grey;
+}
+
 
 $link-color: $blue-nhs-blue;
 $btn-primary-color: $blue-nhs-bright-blue;
