Added ghraw url for pptx.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,6 +5,8 @@ layout: table_wrappers
 {% assign is_draft = true %}
 {% endif %}
 
+{% capture ghrawurl %}"{{ site.gh_edit_repository }}/raw/{{ site.gh_edit_branch }}{% if site.gh_edit_source %}/{{site.gh_edit_source}}{% endif %}"{% endcapture %}
+
 <!DOCTYPE html>
 
 <html lang="{{ site.lang | default: 'en-US' }}">
