--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -3,3 +3,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/mermaid@9.1.5/dist/mermaid.js"></script>
 
+<script>
+    window.nhsce.UseMermaid(document);
+</script>
