--- a/docs/_layouts/slide.html
+++ b/docs/_layouts/slide.html
@@ -39,6 +39,7 @@ layout: table_wrappers
 </div>
 </div>
 <script>
+window.nhsce.MermaidInit(false);
 window.nhsce.UseReveal(document, "reveal4", true, "section.present > div.mermaid, section.present > code.mermaid", true);
 </script> 
 </body>
